# KAIX

./: .gitignore  CLAUDE.md  CONFIG.md  CONFIGURATION_SYSTEM.md  CONTEXT_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DUPLICATION_CONSOLIDATION_SUMMARY.md  README.md  config.toml  debug_guide.md
.claude/agents/: agentic-planning-coordinator.md  cli-interface-designer.md  complexity-moderator.md  config-state-manager.md  context-manager.md  duplication-finder.md  flow-debugger.md  integration-coordinator.md  llm-integration-specialist.md  mock-stub-hunter.md  orphan-code-detector.md  project-improvement-analyzer.md  rust-build-validator.md  spec-compliance-validator.md  system-architect.md  task-execution-specialist.md
.serena/: project.yml
.serena/memories/: architecture_and_structure.md  code_style_and_conventions.md  completion_workflow.md  project_overview.md  suggested_commands.md
docs/: IMPLEMENTATION_STATUS.md  architecture-overview.md  chat_loop.md  component-relationships.md  context.md  data-flow-diagram.md  module-interactions.md  modules.md  spec.md  system-architecture.md
docs/.ignore/: agents.json  org.json
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/context/: global.rs  manager.rs  mod.rs  plan.rs
src/execution/: executor.rs  mod.rs  queue.rs
src/llm/: examples.rs  gemini.rs  mod.rs  openrouter.rs  openrouter_refactored.rs  prompts.rs  streaming.rs  utils.rs
src/planning/: manager.rs  mod.rs
src/ui/: clipboard.rs  components.rs  console_chat.rs  events.rs  file_browser.rs  mod.rs  services.rs  slash_commands.rs
src/utils/: debug.rs  errors.rs  fs.rs  mod.rs  path.rs  text.rs
src/utils/config/: access.rs  builder.rs  mod.rs  provider.rs
src/utils/http/: mod.rs  (+3 more)
(+3 files in other folders)
