[package]
name = "KAI-X"
version = "0.1.0"
edition = "2021"
authors = ["KAI-X Team"]
description = "A sophisticated Rust-based AI coding assistant CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/KAI-X"
keywords = ["ai", "coding-assistant", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kai"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# CLI and TUI
clap = { version = "4.0", features = ["derive"] }
inquire = "0.7"
crossterm = "0.27"
ratatui = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP clients for LLM providers
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# File system and path handling
glob = "0.3"
walkdir = "2.3"
ignore = "0.4"
dirs = "5.0"

# Configuration and logging
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text processing and fuzzy matching
fuzzy-matcher = "0.3"
regex = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections and utilities
indexmap = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
url = "2.0"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
